--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,8 +5,7 @@
 @font-face {
     font-family: 'mikhak_mediummedium';
     src: url('mikhak_medium_medium-webfont.woff2') format('woff2'),
-         url('mikhak_medium_medium-webfont.woff') format('woff'),
-        url('mikhak.ttf') format('truetype');
+         url('mikhak_medium_medium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
